--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firebase-arduino",
   "version": "1.0.0",
-  "description": "A Vue.js project for Arduino",
+  "description": "A Vue.js project",
   "author": "Doru Muntean <munteandoru@gmail.com>",
   "private": true,
   "scripts": {
@@ -10,9 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "firebase": "^4.12.0",
+    "firebase": "^4.12.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
